[metadata]
name = ball_sort_solver
author = Sagi Shadur
maintainer = Sagi Shadur
license = Apache License
license_file = LICENSE
platforms = any

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
include_package_data = True
package_dir =
    = src
install_requires =
    numpy
    pytest
    pytest-cases
    matplotlib
    click
    tensorflow
    pygame

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ball-sort-solver = ball_sort_solver.__main__:ball_sort_solver_cli